@@ -1,3 +1,11 @@
+2014-07-08  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/edit_data.cpp:
+	* src/edit_data.h:
+	* src/edit_dialog.cpp:
+	* src/edit_dialog.h:
+	- 編集ダイアログに役割タイプを設定するコンボボックスを追加
+
 2014-07-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/edit_data.cpp:
